[tool.poetry]
name = "transport"
version = "0.1.0"
description = "Packages qui ont pour objectif de résoudre un problème de minimisation des coûts entre des clients et des entrepôts"
authors = ["Guillaume DEVANT <guillaume.devant@etu.univ-tours.fr>",
            "Hassan TILKI <hassan.tilki@etu.univ-tours.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
pandas = "1.5.3"
rich = "13.3.3"
typer = "0.7.0"
textual = "0.19.0"
matplotlib = "3.7.0"
scipy = "1.10.1"
networkx = "3.0"

[tool.poetry.dev-dependencies]
numpy = "1.24.1"
pytest = "7.2.1"
black = "23.3.0"
mypy = "^1.0.0"
pytest-cov = "4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
